added templating (nunjucks)

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,8 @@
-This is static
+<html>
+<body>
+  <h1>Tools Menu</h1>
+  <ul>
+    <li><a href="/tools/hello">Hello</a></li>
+  </ul>
+</body>
+</html>
