added scope check for specific routes

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <html>
 <body>
-  <h1>Tools Menu</h1>
+  <h1>Sandbox Tools</h1>
   <ul>
-    <li><a href="/tools/hello">Hello</a></li>
+    <li><a href="/tools/hello">Access counter</a></li>
+    <li><a href="/tools/lists">Manage Lists</a></li>
   </ul>
 </body>
 </html>
