added access rights management

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
 <body>
   <h1>Sandbox Tools</h1>
   <ul>
-    <li><a href="/tools/hello">Access counter</a></li>
+    <li><a href="/tools/access">Access Management</a></li>
     <li><a href="/tools/lists">Manage Lists</a></li>
+    <li><a href="/tools/events">Event listener</a></li>
   </ul>
 </body>
 </html>
