including paseto; by page;

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,32 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="base.css" />
+  <link rel="stylesheet" type="text/css" href="./bye.scss" />
 </head>
 <body>
-  <h1>Sandbox Tools</h1>
-  <ul>
-    <li><a href="/tools/access">Access Management</a></li>
-    <li><a href="/tools/lists">Manage Lists</a></li>
-    <li><a href="/tools/events">Event listener</a></li>
-  </ul>
+<section class="bg-red text-center-on-mobile">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-one-quarter">
+        <figure class="brand-logo">
+          <img src="https://designlooter.com/images/rocket-svg-7.png" width="50" height="50">
+        </figure>
+      </div>
+      <div class="column is-three-quarters">
+        <article class="content is-large inverted goodbye">
+          <div class="heading">
+            <h1 class="title">Good bye !</h1>
+          </div>
+          <p>
+            Sorry for the inconvenience but new horizons are emerging for our team and we must sadly say goodbye.</p>
+          <p>
+            We would like to thank you for all these years spent together, for having accompanied us on our social networks, for having given us your confidence regarding our products and our brand.</p>
+          <p class="author">&mdash; The whole team</p>
+        </article>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
+
+>
